--- a/sharperstyle.css
+++ b/sharperstyle.css
@@ -52,7 +52,7 @@ a:hover, a:active {
 
 
 #header {
-  background-color:black;
+  background-color:blue;
   color:white;
   margin:0px;
   padding-top:0px;
@@ -61,7 +61,7 @@ a:hover, a:active {
 }
 
 #nav {
-  background-color:black;
+  background-color:blue;
   color:white;
   margin:0px;
   padding:0px;
