--- a/sharperstyle.css
+++ b/sharperstyle.css
@@ -133,7 +133,7 @@ a:hover, a:active {
 }
 
 #nav li a:link, #nav li a:visited, #header a:link, #header a:visited {
-  color:white;
+  color:black;
   text-decoration:none;
 }
 
