--- a/sharperstyle.css
+++ b/sharperstyle.css
@@ -61,7 +61,7 @@ a:hover, a:active {
 }
 
 #nav {
-  background-color:red;
+  background-color:white;
   color:white;
   margin:0px;
   padding:0px;
@@ -132,8 +132,13 @@ a:hover, a:active {
   display:inline-block;
 }
 
-#nav li a:link, #nav li a:visited, #header a:link, #header a:visited {
+#header a:link, #header a:visited {
   color:black;
+  text-decoration:none;
+}
+
+#nav li a:link, #nav li a:visited {
+  color:blue;
   text-decoration:none;
 }
 
