--- a/sharperstyle.css
+++ b/sharperstyle.css
@@ -53,7 +53,7 @@ a:hover, a:active {
 
 #header {
   background-color:white;
-  color:blue;
+  color:black;
   margin:0px;
   padding-top:0px;
   padding-bottom:0px;
