--- a/index.css
+++ b/index.css
@@ -47,3 +47,12 @@ lin a:hover {
     background-color: #555;
     color: white;
 }
+
+ol {
+  margin:0 0 1.5em;
+  padding:0px;
+  margin-bottom:-5px;
+  counter-reset:item;
+  display: flex;
+  flex-direction: column-reverse;
+}
