--- a/index.css
+++ b/index.css
@@ -48,6 +48,11 @@ lin a:hover {
     color: white;
 }
 
+div.desc, div.list {
+  margin:0px;
+  padding:0px;
+}
+
 ol {
   margin:0 0 1.5em;
   padding:0px;
