--- a/index.css
+++ b/index.css
@@ -37,9 +37,14 @@ ul {
  
 lin a {
     display: block;
-    color:#cc0000;
+    color:#000000;
     padding: 8px 16px;
     text-decoration: none;
+}
+
+a:link {
+ text-decoration:none; 
+ color:#cc0000;
 }
  
 /* 鼠标移动到选项上修改背景颜色 */
