--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ ol {
 ol>li {
   list-style-type:none;
   counter-increment:item;
+  border-left:5px;
   margin-bottom:15px;
   padding:0px;
   padding-left:0.7em;
