--- a/index.css
+++ b/index.css
@@ -66,7 +66,6 @@ ol {
 ol>li {
   list-style-type:none;
   counter-increment:item;
-  border-left:5px;
   margin-bottom:15px;
   padding:0px;
   padding-left:0.7em;
@@ -80,4 +79,9 @@ div.desc ol, div.list ol {
   padding:0px;
   margin-bottom:-5px;
   list-style-type:none;
+}
+
+div.list ol li, div.desc ol li {
+  padding-left:10px;
+  margin-bottom:15px;
 }
