--- a/index.css
+++ b/index.css
@@ -54,3 +54,17 @@ lin a:hover {
     color: white;
 }
 
+ol {
+  margin:0 0 1.5em;
+  padding:0px;
+  margin-bottom:-5px;
+  counter-reset:item;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+ol>li {
+  counter-increment:item;
+  margin-bottom:15px;
+  
+}
