--- a/index.css
+++ b/index.css
@@ -55,7 +55,9 @@ lin a:hover {
 }
 
 ol {
-  
+  margin:0 0 1.5em;
+  padding:0px;
+  margin-bottom:-5px;
   counter-reset:item;
   display: flex;
   flex-direction: column-reverse;
