--- a/index.css
+++ b/index.css
@@ -55,16 +55,6 @@ lin a:hover {
 }
 
 ol {
-  margin:0 0 1.5em;
-  padding:0px;
-  margin-bottom:-5px;
-  counter-reset:item;
-  display: flex;
-  flex-direction: column-reverse;
+  padding-left: 30px
 }
 
-ol>li {
-  counter-increment:item;
-  margin-bottom:15px;
-  content:counter(item);
-}
