--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ lin a:hover {
 }
 
 ol {
-  margin:0 0 1.5em;
+  margin:0 2em  1.5em;
   padding:0px;
   margin-bottom:-5px;
   counter-reset:item;
@@ -66,6 +66,6 @@ ol {
 ol>li {
   counter-increment:item;
   margin-bottom:15px;
-  padding-left:30px;
+  
 }
 
