--- a/index.css
+++ b/index.css
@@ -55,17 +55,25 @@ lin a:hover {
 }
 
 ol {
-  margin:0 2em  1.5em;
-  padding:0px;
-  margin-bottom:-5px;
-  counter-reset:item;
-  display: flex;
-  flex-direction: column-reverse;
+  margin:0 2em  1.5em;
+  padding:0px;
+  margin-bottom:-5px;
+  counter-reset:item;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 ol>li {
-  counter-increment:item;
-  margin-bottom:15px;
-  
+  counter-increment:item;
+  margin-bottom:15px;
+  
 }
 
+
+div.desc ol, div.list ol {
+  overflow:hidden;
+  margin:0px;
+  padding:0px;
+  margin-bottom:-5px;
+  list-style-type:none;
+}
