--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body{
 
 
 /*导航栏*/
-ul {
+ul.one {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -77,3 +77,4 @@ div.desc ol, div.list ol {
   margin-bottom:-5px;
   list-style-type:none;
 }
+
