--- a/index.css
+++ b/index.css
@@ -78,3 +78,36 @@ div.desc ol, div.list ol {
   list-style-type:none;
 }
 
+h1 {
+  font-size:32px;
+  margin:0px;
+  padding:10px;
+}
+
+h2 {
+  display:inline;
+  align:left;
+  font-size:130%;
+  margin:0px;
+  padding:0px;
+  padding-top:1em;
+  padding-bottom:1em;
+}
+
+h3 {
+  align:left;
+  font-size:110%;
+  margin:0px;
+  padding:0px;
+  padding-top:1em;
+  padding-bottom:0.5em;
+}
+
+h4 {
+  align:left;
+  font-size:100%;
+  font-style:italic;
+  margin:0px;
+  padding:0px;
+}
+
