--- a/index.css
+++ b/index.css
@@ -69,6 +69,12 @@ ol>li {
   
 }
 
+ul>li {
+  counter-increment:item;
+  margin-bottom:15px;
+  
+}
+
 
 div.desc ol, div.list ol {
   overflow:hidden;
