--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@ ol {
   counter-reset:item;
   display: flex;
   flex-direction: column-reverse;
+  font-family:"Times New Roman",Times,serif;
 }
 
 ol>li {
